--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* 
 body {
   min-height: 100vh;
   display: flex;
@@ -31,8 +30,16 @@ h3,
   padding: 10px;
 }
 
-.display {
+.card {
   background-color: white;
+  padding: 20px;
+  border-radius: 15px;
+  margin: 20px;
+
+}
+
+.display {
+  /* background-color: white; */
   padding: 20px;
   border-radius: 15px;
   margin: 20px;
@@ -70,7 +77,7 @@ h3,
   padding: 6px 12px;
   font-size: 16px;
   border-radius: 13px;
-} */
+}
 
 /* :hover {
   color: #fff;
